feat: 两种对话模式

--- a/frontend/src/pages/Chat/Main/ChatBox/index.less
+++ b/frontend/src/pages/Chat/Main/ChatBox/index.less
@@ -4,6 +4,7 @@
   width: 100%;
   background-color: #fff;
   position: absolute;
+  z-index: 1;
   bottom: 0;
   :global {
     .ant-form-item-explain-error {
